; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_changelist.c_changelist_postfix.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_changelist.c_changelist_postfix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_18__ = type { i64, i64, i32 }
%struct.TYPE_17__ = type { %struct.TYPE_19__*, i64, i64, i64, i64 }
%struct.TYPE_19__ = type { i32* }

@ZFS_MAXPROPLEN = common dso_local global i32 0, align 4
@ZFS_PROP_MOUNTPOINT = common dso_local global i64 0, align 8
@UU_WALK_REVERSE = common dso_local global i32 0, align 4
@UU_WALK_ROBUST = common dso_local global i32 0, align 4
@GLOBAL_ZONEID = common dso_local global i64 0, align 8
@B_FALSE = common dso_local global i64 0, align 8
@ZFS_PROP_SHARENFS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"off\00", align 1
@ZFS_PROP_SHARESMB = common dso_local global i32 0, align 4
@ZFS_PROP_KEYSTATUS = common dso_local global i32 0, align 4
@ZFS_KEYSTATUS_UNAVAILABLE = common dso_local global i64 0, align 8
@ZFS_PROP_CANMOUNT = common dso_local global i32 0, align 4
@ZFS_CANMOUNT_ON = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @changelist_postfix(%struct.TYPE_18__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_18__*, align 8
  %4 = alloca %struct.TYPE_17__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.TYPE_18__* %0, %struct.TYPE_18__** %3, align 8
  %15 = load i32, i32* @ZFS_MAXPROPLEN, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %6, align 8
  %18 = alloca i8, i64 %16, align 16
  store i64 %16, i64* %7, align 8
  store i32 0, i32* %8, align 4
  %19 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 8
  %22 = call %struct.TYPE_17__* @uu_avl_last(i32 %21)
  store %struct.TYPE_17__* %22, %struct.TYPE_17__** %4, align 8
  %23 = icmp eq %struct.TYPE_17__* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  store i32 1, i32* %10, align 4
  br label %258

25:                                               ; preds = %1
  %26 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @ZFS_PROP_MOUNTPOINT, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %36

31:                                               ; preds = %25
  %32 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %32, i32 0, i32 0
  %34 = load %struct.TYPE_19__*, %struct.TYPE_19__** %33, align 8
  %35 = call i32 @remove_mountpoint(%struct.TYPE_19__* %34)
  br label %36

36:                                               ; preds = %31, %25
  %37 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %38 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %37, i32 0, i32 0
  %39 = load %struct.TYPE_19__*, %struct.TYPE_19__** %38, align 8
  %40 = icmp ne %struct.TYPE_19__* %39, null
  br i1 %40, label %41, label %53

41:                                               ; preds = %36
  %42 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %42, i32 0, i32 0
  %44 = load %struct.TYPE_19__*, %struct.TYPE_19__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %44, i32 0, i32 0
  %46 = load i32*, i32** %45, align 8
  store i32* %46, i32** %9, align 8
  %47 = load i32*, i32** %9, align 8
  %48 = icmp ne i32* %47, null
  %49 = zext i1 %48 to i32
  %50 = call i32 @assert(i32 %49)
  %51 = load i32*, i32** %9, align 8
  %52 = call i32 @zfs_uninit_libshare(i32* %51)
  br label %53

53:                                               ; preds = %41, %36
  %54 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %55 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %54, i32 0, i32 2
  %56 = load i32, i32* %55, align 8
  %57 = load i32, i32* @UU_WALK_REVERSE, align 4
  %58 = load i32, i32* @UU_WALK_ROBUST, align 4
  %59 = or i32 %57, %58
  %60 = call i32* @uu_avl_walk_start(i32 %56, i32 %59)
  store i32* %60, i32** %5, align 8
  %61 = icmp eq i32* %60, null
  br i1 %61, label %62, label %63

62:                                               ; preds = %53
  store i32 -1, i32* %2, align 4
  store i32 1, i32* %10, align 4
  br label %258

63:                                               ; preds = %53
  br label %64

64:                                               ; preds = %250, %97, %83, %77, %63
  %65 = load i32*, i32** %5, align 8
  %66 = call %struct.TYPE_17__* @uu_avl_walk_next(i32* %65)
  store %struct.TYPE_17__* %66, %struct.TYPE_17__** %4, align 8
  %67 = icmp ne %struct.TYPE_17__* %66, null
  br i1 %67, label %68, label %251

68:                                               ; preds = %64
  %69 = call i64 (...) @getzoneid()
  %70 = load i64, i64* @GLOBAL_ZONEID, align 8
  %71 = icmp eq i64 %69, %70
  br i1 %71, label %72, label %78

72:                                               ; preds = %68
  %73 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %74 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %73, i32 0, i32 4
  %75 = load i64, i64* %74, align 8
  %76 = icmp ne i64 %75, 0
  br i1 %76, label %77, label %78

77:                                               ; preds = %72
  br label %64

78:                                               ; preds = %72, %68
  %79 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %80 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %79, i32 0, i32 3
  %81 = load i64, i64* %80, align 8
  %82 = icmp ne i64 %81, 0
  br i1 %82, label %84, label %83

83:                                               ; preds = %78
  br label %64

84:                                               ; preds = %78
  %85 = load i64, i64* @B_FALSE, align 8
  %86 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %87 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %86, i32 0, i32 3
  store i64 %85, i64* %87, align 8
  %88 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %89 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %88, i32 0, i32 0
  %90 = load %struct.TYPE_19__*, %struct.TYPE_19__** %89, align 8
  %91 = call i32 @zfs_refresh_properties(%struct.TYPE_19__* %90)
  %92 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %93 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %92, i32 0, i32 0
  %94 = load %struct.TYPE_19__*, %struct.TYPE_19__** %93, align 8
  %95 = call i64 @ZFS_IS_VOLUME(%struct.TYPE_19__* %94)
  %96 = icmp ne i64 %95, 0
  br i1 %96, label %97, label %98

97:                                               ; preds = %84
  br label %64

98:                                               ; preds = %84
  %99 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %100 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %99, i32 0, i32 0
  %101 = load %struct.TYPE_19__*, %struct.TYPE_19__** %100, align 8
  %102 = load i32, i32* @ZFS_PROP_SHARENFS, align 4
  %103 = trunc i64 %16 to i32
  %104 = load i64, i64* @B_FALSE, align 8
  %105 = call i64 @zfs_prop_get(%struct.TYPE_19__* %101, i32 %102, i8* %18, i32 %103, i32* null, i32* null, i32 0, i64 %104)
  %106 = icmp eq i64 %105, 0
  br i1 %106, label %107, label %110

107:                                              ; preds = %98
  %108 = call i64 @strcmp(i8* %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %109 = icmp ne i64 %108, 0
  br label %110

110:                                              ; preds = %107, %98
  %111 = phi i1 [ false, %98 ], [ %109, %107 ]
  %112 = zext i1 %111 to i32
  store i32 %112, i32* %11, align 4
  %113 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %114 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %113, i32 0, i32 0
  %115 = load %struct.TYPE_19__*, %struct.TYPE_19__** %114, align 8
  %116 = load i32, i32* @ZFS_PROP_SHARESMB, align 4
  %117 = trunc i64 %16 to i32
  %118 = load i64, i64* @B_FALSE, align 8
  %119 = call i64 @zfs_prop_get(%struct.TYPE_19__* %115, i32 %116, i8* %18, i32 %117, i32* null, i32* null, i32 0, i64 %118)
  %120 = icmp eq i64 %119, 0
  br i1 %120, label %121, label %124

121:                                              ; preds = %110
  %122 = call i64 @strcmp(i8* %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %123 = icmp ne i64 %122, 0
  br label %124

124:                                              ; preds = %121, %110
  %125 = phi i1 [ false, %110 ], [ %123, %121 ]
  %126 = zext i1 %125 to i32
  store i32 %126, i32* %12, align 4
  %127 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %128 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %127, i32 0, i32 0
  %129 = load %struct.TYPE_19__*, %struct.TYPE_19__** %128, align 8
  %130 = load i32, i32* @ZFS_PROP_KEYSTATUS, align 4
  %131 = call i64 @zfs_prop_get_int(%struct.TYPE_19__* %129, i32 %130)
  %132 = load i64, i64* @ZFS_KEYSTATUS_UNAVAILABLE, align 8
  %133 = icmp eq i64 %131, %132
  %134 = zext i1 %133 to i32
  store i32 %134, i32* %14, align 4
  %135 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %136 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %135, i32 0, i32 0
  %137 = load %struct.TYPE_19__*, %struct.TYPE_19__** %136, align 8
  %138 = call i32 @zfs_is_mounted(%struct.TYPE_19__* %137, i32* null)
  store i32 %138, i32* %13, align 4
  %139 = load i32, i32* %13, align 4
  %140 = icmp ne i32 %139, 0
  br i1 %140, label %180, label %141

141:                                              ; preds = %124
  %142 = load i32, i32* %14, align 4
  %143 = icmp ne i32 %142, 0
  br i1 %143, label %180, label %144

144:                                              ; preds = %141
  %145 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %146 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %145, i32 0, i32 2
  %147 = load i64, i64* %146, align 8
  %148 = icmp ne i64 %147, 0
  br i1 %148, label %168, label %149

149:                                              ; preds = %144
  %150 = load i32, i32* %11, align 4
  %151 = icmp ne i32 %150, 0
  br i1 %151, label %160, label %152

152:                                              ; preds = %149
  %153 = load i32, i32* %12, align 4
  %154 = icmp ne i32 %153, 0
  br i1 %154, label %160, label %155

155:                                              ; preds = %152
  %156 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %157 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %156, i32 0, i32 1
  %158 = load i64, i64* %157, align 8
  %159 = icmp ne i64 %158, 0
  br i1 %159, label %160, label %180

160:                                              ; preds = %155, %152, %149
  %161 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %162 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %161, i32 0, i32 0
  %163 = load %struct.TYPE_19__*, %struct.TYPE_19__** %162, align 8
  %164 = load i32, i32* @ZFS_PROP_CANMOUNT, align 4
  %165 = call i64 @zfs_prop_get_int(%struct.TYPE_19__* %163, i32 %164)
  %166 = load i64, i64* @ZFS_CANMOUNT_ON, align 8
  %167 = icmp eq i64 %165, %166
  br i1 %167, label %168, label %180

168:                                              ; preds = %160, %144
  %169 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %170 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %169, i32 0, i32 0
  %171 = load %struct.TYPE_19__*, %struct.TYPE_19__** %170, align 8
  %172 = call i64 @zfs_mount(%struct.TYPE_19__* %171, i32* null, i32 0)
  %173 = icmp ne i64 %172, 0
  br i1 %173, label %174, label %177

174:                                              ; preds = %168
  %175 = load i32, i32* %8, align 4
  %176 = add nsw i32 %175, 1
  store i32 %176, i32* %8, align 4
  br label %179

177:                                              ; preds = %168
  %178 = load i32, i32* @TRUE, align 4
  store i32 %178, i32* %13, align 4
  br label %179

179:                                              ; preds = %177, %174
  br label %180

180:                                              ; preds = %179, %160, %155, %141, %124
  %181 = load i32, i32* %11, align 4
  %182 = icmp ne i32 %181, 0
  br i1 %182, label %183, label %195

183:                                              ; preds = %180
  %184 = load i32, i32* %13, align 4
  %185 = icmp ne i32 %184, 0
  br i1 %185, label %186, label %195

186:                                              ; preds = %183
  %187 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %188 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %187, i32 0, i32 0
  %189 = load %struct.TYPE_19__*, %struct.TYPE_19__** %188, align 8
  %190 = call i64 @zfs_share_nfs(%struct.TYPE_19__* %189)
  %191 = load i32, i32* %8, align 4
  %192 = sext i32 %191 to i64
  %193 = add nsw i64 %192, %190
  %194 = trunc i64 %193 to i32
  store i32 %194, i32* %8, align 4
  br label %215

195:                                              ; preds = %183, %180
  %196 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %197 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %196, i32 0, i32 1
  %198 = load i64, i64* %197, align 8
  %199 = icmp ne i64 %198, 0
  br i1 %199, label %205, label %200

200:                                              ; preds = %195
  %201 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %202 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %201, i32 0, i32 1
  %203 = load i64, i64* %202, align 8
  %204 = icmp ne i64 %203, 0
  br i1 %204, label %205, label %214

205:                                              ; preds = %200, %195
  %206 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %207 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %206, i32 0, i32 0
  %208 = load %struct.TYPE_19__*, %struct.TYPE_19__** %207, align 8
  %209 = call i64 @zfs_unshare_nfs(%struct.TYPE_19__* %208, i32* null)
  %210 = load i32, i32* %8, align 4
  %211 = sext i32 %210 to i64
  %212 = add nsw i64 %211, %209
  %213 = trunc i64 %212 to i32
  store i32 %213, i32* %8, align 4
  br label %214

214:                                              ; preds = %205, %200
  br label %215

215:                                              ; preds = %214, %186
  %216 = load i32, i32* %12, align 4
  %217 = icmp ne i32 %216, 0
  br i1 %217, label %218, label %230

218:                                              ; preds = %215
  %219 = load i32, i32* %13, align 4
  %220 = icmp ne i32 %219, 0
  br i1 %220, label %221, label %230

221:                                              ; preds = %218
  %222 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %223 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %222, i32 0, i32 0
  %224 = load %struct.TYPE_19__*, %struct.TYPE_19__** %223, align 8
  %225 = call i64 @zfs_share_smb(%struct.TYPE_19__* %224)
  %226 = load i32, i32* %8, align 4
  %227 = sext i32 %226 to i64
  %228 = add nsw i64 %227, %225
  %229 = trunc i64 %228 to i32
  store i32 %229, i32* %8, align 4
  br label %250

230:                                              ; preds = %218, %215
  %231 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %232 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %231, i32 0, i32 1
  %233 = load i64, i64* %232, align 8
  %234 = icmp ne i64 %233, 0
  br i1 %234, label %240, label %235

235:                                              ; preds = %230
  %236 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %237 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %236, i32 0, i32 1
  %238 = load i64, i64* %237, align 8
  %239 = icmp ne i64 %238, 0
  br i1 %239, label %240, label %249

240:                                              ; preds = %235, %230
  %241 = load %struct.TYPE_17__*, %struct.TYPE_17__** %4, align 8
  %242 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %241, i32 0, i32 0
  %243 = load %struct.TYPE_19__*, %struct.TYPE_19__** %242, align 8
  %244 = call i64 @zfs_unshare_smb(%struct.TYPE_19__* %243, i32* null)
  %245 = load i32, i32* %8, align 4
  %246 = sext i32 %245 to i64
  %247 = add nsw i64 %246, %244
  %248 = trunc i64 %247 to i32
  store i32 %248, i32* %8, align 4
  br label %249

249:                                              ; preds = %240, %235
  br label %250

250:                                              ; preds = %249, %221
  br label %64

251:                                              ; preds = %64
  %252 = load i32*, i32** %5, align 8
  %253 = call i32 @uu_avl_walk_end(i32* %252)
  %254 = load i32, i32* %8, align 4
  %255 = icmp ne i32 %254, 0
  %256 = zext i1 %255 to i64
  %257 = select i1 %255, i32 -1, i32 0
  store i32 %257, i32* %2, align 4
  store i32 1, i32* %10, align 4
  br label %258

258:                                              ; preds = %251, %62, %24
  %259 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %259)
  %260 = load i32, i32* %2, align 4
  ret i32 %260
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local %struct.TYPE_17__* @uu_avl_last(i32) #2

declare dso_local i32 @remove_mountpoint(%struct.TYPE_19__*) #2

declare dso_local i32 @assert(i32) #2

declare dso_local i32 @zfs_uninit_libshare(i32*) #2

declare dso_local i32* @uu_avl_walk_start(i32, i32) #2

declare dso_local %struct.TYPE_17__* @uu_avl_walk_next(i32*) #2

declare dso_local i64 @getzoneid(...) #2

declare dso_local i32 @zfs_refresh_properties(%struct.TYPE_19__*) #2

declare dso_local i64 @ZFS_IS_VOLUME(%struct.TYPE_19__*) #2

declare dso_local i64 @zfs_prop_get(%struct.TYPE_19__*, i32, i8*, i32, i32*, i32*, i32, i64) #2

declare dso_local i64 @strcmp(i8*, i8*) #2

declare dso_local i64 @zfs_prop_get_int(%struct.TYPE_19__*, i32) #2

declare dso_local i32 @zfs_is_mounted(%struct.TYPE_19__*, i32*) #2

declare dso_local i64 @zfs_mount(%struct.TYPE_19__*, i32*, i32) #2

declare dso_local i64 @zfs_share_nfs(%struct.TYPE_19__*) #2

declare dso_local i64 @zfs_unshare_nfs(%struct.TYPE_19__*, i32*) #2

declare dso_local i64 @zfs_share_smb(%struct.TYPE_19__*) #2

declare dso_local i64 @zfs_unshare_smb(%struct.TYPE_19__*, i32*) #2

declare dso_local i32 @uu_avl_walk_end(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
